# mcp_agent_mail_secure

./: .env.example  .gitignore  .mcp.json  AGENTS.md  AGENT_ONBOARDING.md  BUGFIX_CONTENT_LENGTH.md  BUGFIX_TEST_BEARER_AUTH.md  CHANGELOG.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_SUMMARY.md  CRITICAL_BUG_REPORT.md  CROSS_PROJECT_COORDINATION.md  Dockerfile  LICENSE  PLAN_TO_ENABLE_EASY_AND_SECURE_SHARING_OF_AGENT_MAILBOX.md  PLAN_TO_NON_DISRUPTIVELY_INTEGRATE_WITH_THE_GIT_WORKTREE_APPROACH.md  README.md  SECOND_REVIEW_FINDINGS.md  SKILL.md  THIRD_REVIEW_FINDINGS.md  TODO.md  ULTRA_DEEP_ANALYSIS_SUMMARY.md  VERBOSE_LOGGING.md  cline.mcp.json  codex.mcp.json  codex.mcp.json.bak.1761347857  compose.yaml  cursor.mcp.json  cursor.mcp.json.bak.1761346099  docker-compose.yml  gemini.mcp.json  project_idea_and_guide.md  pyproject.toml  revoked-signing-77c6e768.pub  windsurf.mcp.json
.beads/: .gitignore  config.yaml  issues.jsonl
.claude/: settings.json  settings.local.json.bak.1761344182  settings.local.json.bak.1761346089  settings.local.json.bak.1761347851
.codex/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
ci/: README.md  ty-baseline.txt  ty-check-baseline.sh
deploy/observability/: prometheus_rules.sample.yml
docs/: GUIDE_TO_OPTIMAL_MCP_SERVER_DESIGN.md  IDENTITY_CONTRACT.md  observability.md
docs/adr/: README.md
examples/: client_bootstrap.py
scripts/: automatically_detect_all_installed_coding_agents_and_install_mcp_agent_mail_in_all.sh  identity-resolve.sh  identity-write.sh  install.sh  integrate.sh  integrate_claude_code.sh  integrate_cline.sh  integrate_codex_cli.sh  integrate_cursor.sh  integrate_factory_droid.sh  integrate_gemini_cli.sh  integrate_github_copilot.sh  integrate_opencode.sh  integrate_windsurf.sh  integration_showcase.py  lib.sh  run_server_with_token.sh  share_to_github_pages.py  test_bd_path_snippet_rewrite.sh  test_guard.sh  test_run_server_directly.sh  update_sqlite_vendor.py
scripts/hooks/: check_inbox.sh  codex_notify.sh
scripts/logrotate/: mcp-agent-mail.conf
src/mcp_agent_mail/: __init__.py  __main__.py  app.py  cli.py  config.py  (+10 more)
tests/: conftest.py  test_ack_views_details.py  test_agent_name_validation.py  test_am_run_basic.py  test_app_helpers.py  test_archive_browser.py  test_attachments_extended.py  test_auto_retire_stale_agents.py  test_broadcast.py  test_capability_rbac.py  test_claim_overlap_and_macro_failures.py  test_cli.py  test_cli_acks_and_errors.py  test_cli_additional.py  test_cli_archive_commands.py  test_cli_extended.py  test_cli_guard_commands.py  test_cli_list_acks_and_main.py  test_cli_mail_commands.py  test_cli_stub.py  test_clone_identity_equivalence.py  test_concurrency_agents.py  test_concurrent_writes.py  test_contact_and_routing.py  test_contact_management_flow.py  test_contact_policy.py  test_contacts.py  test_database_failures.py  test_e2e_disaster_recovery.py  test_e2e_multi_agent_workflow.py  test_entrypoints_and_llm.py  test_error_invalid_inputs.py  test_file_reservation_lifecycle.py  test_git_archive_failures.py  test_git_index_lock.py  test_guard_edges.py  test_guard_integration.py  test_guard_prepush.py  test_guard_rename.py  test_guard_render.py  (+63 more)
(+38 files in other folders)
