[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-agent-mail"
version = "0.3.4"
description = "Coordinated multi-agent messaging and coordination MCP server."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "mcp-agent-mail maintainers" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "fastmcp>=2.10.5",
  "uvicorn[standard]>=0.32.0",
  "fastapi>=0.110.0",
  "python-decouple>=3.8",
  "sqlmodel>=0.0.16",
  "sqlalchemy[asyncio]>=2.0.35",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.2",
  "structlog>=24.1.0",
  "orjson>=3.10.7,<4",
  "filelock>=3.16.0",
  "GitPython>=3.1.43",
  "pathspec>=0.12.1",
  "pillow>=10.4.0",
]

[project.optional-dependencies]
cli = ["rich>=13.9.1", "typer>=0.15.0"]
viewer = ["jinja2>=3.1.4", "markdown2>=2.4.12", "nh3>=0.2.14"]
signing = ["pynacl>=1.6.0", "authlib>=1.5.2,<1.6"]
redis = ["redis[hiredis]>=5.3.0"]
postgres = ["asyncpg>=0.30.0"]
all = ["mcp-agent-mail[cli,viewer,signing,redis]"]
dev = [
  "ruff>=0.5.7",
  "mypy>=1.11.1",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ipython>=8.27.0",
]

[project.urls]
Homepage = "https://example.com/mcp-agent-mail"
Repository = "https://example.com/mcp-agent-mail"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_agent_mail"]

[tool.hatch.build.targets.sdist]
exclude = ["/.venv", "/.vscode", "/.idea", "/.git", "/__pycache__", "*.py[cod]", "*.db*", ".DS_Store"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "B",
  "I",
  "C4",
  "ASYNC",
  "A",
  "RUF",
  "SIM",
  "PTH",
  "FA",
]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_agent_mail"]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "--strict-markers",
  "--cov=mcp_agent_mail",
  "--cov-report=term-missing",
]
pythonpath = ["src"]
filterwarnings = [
  "ignore:coroutine 'FastMCP.get_tool' was never awaited:RuntimeWarning",
  "ignore:Exception in thread:pytest.PytestUnhandledThreadExceptionWarning",
  "ignore:Event loop is closed:RuntimeWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "benchmark: marks tests as performance benchmarks",
  "ci_regression: marks tests for CI performance regression checking",
]

[dependency-groups]
dev = [
    "psutil>=7.2.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
]
